<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

<TextView
 android:layout_width="fill_parent"
 android:layout_height="wrap_content"
 android:text="@string/notes">
</TextView>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <EditText
        android:id="@+id/txtNote"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:ems="10"
        android:hint="Введите заметку" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/addNote"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/addNote" />

</LinearLayout>

<ListView
    android:id="@+id/listNotes"
    android:layout_width="match_parent"
    android:layout_height="258dp" >
</ListView>

<EditText
    android:id="@+id/editNote"
    android:layout_width="fill_parent"
    android:layout_height="75dp"
    android:gravity="top|left"
    android:inputType="textMultiLine"
    android:lines="8"
    android:maxLines="10"
    android:minLines="6"
    android:scrollbars="vertical"
    android:text="" />

<Button
    android:id="@+id/btnEdit"
    style="?android:attr/buttonStyleSmall"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="right"
    android:text="@string/saveBtn" />

</LinearLayout>