<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.organizer.MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:text="@string/main_header"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/header_size" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerInParent="true"
         android:layout_marginTop="@dimen/marginTopTable" >
        
		
        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/marginbottomTableRow" >

            <Button
                android:id="@+id/btnTasks"
                android:background="@xml/rounded_button"
                android:drawableTop="@drawable/tasks"
                android:padding="@dimen/padding_header_button"
                android:text="@string/tasks"
                android:layout_marginEnd="@dimen/marginTableColumns"
                 />

            <Button
                android:id="@+id/btnNotes"
                android:background="@xml/rounded_button"
                android:drawableTop="@drawable/notes"
            	android:padding="@dimen/padding_header_button"
                android:text="@string/notes" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btnCalendar"
                android:layout_marginEnd="@dimen/marginTableColumns"
                android:layout_span="2"
                android:background="@xml/rounded_button"
                android:drawableTop="@drawable/calendar"
                android:padding="@dimen/padding_header_button"
                android:text="@string/calendar" />

        </TableRow>

    </TableLayout>

</RelativeLayout>